tests/final/expect/15__torture__malformed_multifile_macro_arity_mismatch_no_crash.diag
Diagnostics:
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_multifile_macro_arity_mismatch_no_crash.c:4:12: error: macro 'NEED2' requires 2 argument(s), got 1
Error: preprocessing failed
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_multifile_macro_arity_mismatch_no_crash.c:4:12: error: macro 'NEED2' requires 2 argument(s), got 1
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_multifile_macro_arity_mismatch_no_crash.c:4:12: error: macro 'NEED2' requires 2 argument(s), got 1
